--- a/HaxeBinding/HaxeBinding/Resources/Templates/EmptyHaxeJavaProject.xpt.xml
+++ b/HaxeBinding/HaxeBinding/Resources/Templates/EmptyHaxeJavaProject.xpt.xml
@@ -11,7 +11,7 @@
 
     <Combine name="${ProjectName}" directory=".">
         <Project name="${ProjectName}" directory="." type="Haxe">
-            <Options BuildFile="${ProjectName}.hxml" OutputFile="bin/${ProjectName}.jar" ExecuteFile="java -jar" />
+            <Options BuildFile="${ProjectName}.hxml" DefaultRun="true" />
             <Files>
                 <HaxeFile name="src/${ModuleName}.hx" AddStandardHeader="True">
 <![CDATA[package;
