--- a/HaxeBinding/HaxeBinding/Resources/Templates/EmptyOpenFLProject.xpt.xml
+++ b/HaxeBinding/HaxeBinding/Resources/Templates/EmptyOpenFLProject.xpt.xml
@@ -10,7 +10,7 @@
     </TemplateConfiguration>
 	
     <Combine name="${ProjectName}" directory=".">
-        <Project name="${ProjectName}" directory="." type="Haxe">
+        <Project name="${ProjectName}" directory="." type="OpenFL">
             <Options BuildFile="project.xml" />
             <Files>
 				<HaxeFile name="Assets/openfl.svg">
